--- a/NurseryGarden/NurseryGarden.csproj
+++ b/NurseryGarden/NurseryGarden.csproj
@@ -11,4 +11,12 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.9.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Images\sekwoja.jpg" />
+  </ItemGroup>
+
 </Project>
